syntax = "proto3";

package ping.v1;

message PingRequest {
  string data = 1;
}

message PingResponse {
  string data = 1;
}
